@@ -1,5 +1,5 @@
 Package: mirt
-Version: 1.3.10
+Version: 1.3.11
 Date: 2014-04-23
 Type: Package
 Title: Multidimensional Item Response Theory
