@@ -34,6 +34,7 @@ setClass("AllModelClass",
                         infomethod='character',
                         factorNames='character',
                         method='character',
+                        Moptim='character',
                         itemtype='character',
                         time='numeric',
                         condnum='numeric',
